--- a/html-css-js/index.html
+++ b/html-css-js/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index_page</title>
 </head>
 <body>
     <h1>Ajay kumar</h1>
@@ -12,6 +12,7 @@
     <a href="web001.html">Web001</a>
     <a href="web002.html">Web002</a>
     <a href="web003.html">Web003</a>
+    <a href="web004.html">Web004</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="Assignment1.html">Assignment1</a>
