added the alt+shift+f

--- a/html-css-js/index.html
+++ b/html-css-js/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index_page</title>
 </head>
+
 <body>
     <h1>Ajay kumar</h1>
     <hr>
@@ -16,5 +18,7 @@
     <hr>
     <h3>My Assignments</h3>
     <a href="Assignment1.html">Assignment1</a>
+    <a href="Assignment2.html">Assignment2</a>
 </body>
+
 </html>
