--- a/html-css-js/Assignment1.html
+++ b/html-css-js/Assignment1.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img{
+        img {
             height: 31px;
             width: 103px;
         }
     </style>
 </head>
+
 <body>
     <center>
         <img src="../images/logo.jpg">
@@ -23,10 +25,12 @@
         <input type="password" placeholder="At least 6 digits">
         <p>password must be at least 6 characters.</p>
         <br>
-        <p>To verify your number,we will send you a text<br> message with a temporary code.Message and data<br>rates may apply</p>
+        <p>To verify your number,we will send you a text<br> message with a temporary code.Message and data<br>rates may
+            apply</p>
         <button>verify your mobile number</button>
-        
+
     </center>
-    
+
 </body>
+
 </html>
