--- a/html-css-js/web004.html
+++ b/html-css-js/web004.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web004</title>
     <style>
-        .main{
-            display:flex;
+        .main {
+            display: flex;
             /* justify-content: center; */
             /* justify-content: space-around; */
             justify-content: space-between;
             background-color: silver;
             padding: 10px;
         }
-        .box1{
+
+        .box1 {
             background-color: pink;
             margin: 10px;
+            padding: 10px;
         }
-        .box2{
+
+        .box2 {
             background-color: yellow;
             margin: 10px;
+            padding: 10px;
         }
-        .box3{
-            background-color:skyblue;
+
+        .box3 {
+            background-color: skyblue;
             margin: 10px;
+            padding: 10px;
         }
     </style>
 </head>
+
 <body>
     <div class="main">
         <div class="box1">
@@ -42,14 +50,24 @@
     <br>
     <div class="main">
         <div class="box1">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem
+            placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar
+            vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc
+            posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra
+            inceptos himenaeos.
         </div>
         <div class="box2">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Adipiscing elit quisque faucibus ex sapien vitae pellentesque. Vitae pellentesque sem placerat in id cursus mi. Cursus mi pretium tellus duis convallis tempus leo. Tempus leo eu aenean sed diam urna tempor. Urna tempor pulvinar vivamus fringilla lacus nec metus.
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Adipiscing elit quisque faucibus ex sapien vitae
+            pellentesque. Vitae pellentesque sem placerat in id cursus mi. Cursus mi pretium tellus duis convallis
+            tempus leo. Tempus leo eu aenean sed diam urna tempor. Urna tempor pulvinar vivamus fringilla lacus nec
+            metus.
         </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+        <div class="box3">
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex
+            sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis.
+            Pretium tellus duis convallis tempus leo eu aenean.
         </div>
     </div>
 </body>
+
 </html>
