updated folder structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Ajay kumar</h1>
+    <h1>Ajay kumar <a href="https://github.com/dajaykumargit/MERN">Github</a></h1>
     <hr>
     <h3>HTML-CSS Pages</h3>
     <a href="web001.html">Web001</a>
