--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 
 <body>
-    <h1>Ajay kumar <a href="https://github.com/dajaykumargit/MERN">Github</a></h1>
+    
+    <h1>Ajay kumar [<a href="https://github.com/dajaykumargit/MERN">Github</a>]</h1>
     <hr>
-    <h3>HTML-CSS Pages</h3>
-    <a href="web001.html">Web001</a>
-    <a href="web002.html">Web002</a>
-    <a href="web003.html">Web003</a>
-    <a href="web004.html">Web004</a>
+    <fieldset>
+    <legend><h3>HTML-CSS Pages</h3></legend>
+    <a href="./html-css-js/part01/web001.html">Web001</a>
+    <a href="/html-css-js/part01/web002.html">Web002</a>
+    <a href="./html-css-js/part01/web003.html">Web003</a>
+    <a href="./html-css-js/part01/web004.html">Web004</a>
     <hr>
     <h3>My Assignments</h3>
-    <a href="Assignment1.html">Assignment1</a>
-    <a href="Assignment2.html">Assignment2</a>
+    <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
+    <a href="./html-css-js/Assignments/Assignment2.html">Assignment2</a>
+    </fieldset>
 </body>
 
 </html>
