--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     
-    <h1>Ajay kumar [<a href="https://github.com/dajaykumargit/MERN">Github</a>]</h1>
+    <h1>Ajay kumar Donthagani [<a href="https://github.com/dajaykumargit/MERN">Github</a>]</h1>
     <hr>
     <fieldset>
     <legend><h3>HTML-CSS Pages</h3></legend>
@@ -17,6 +17,8 @@
     <a href="/html-css-js/part01/web002.html">Web002</a>
     <a href="./html-css-js/part01/web003.html">Web003</a>
     <a href="./html-css-js/part01/web004.html">Web004</a>
+    <a href="./html-css-js/part01/web005.html">web005</a>
+    <a href="./html-css-js/part01/web006.html">Web006</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
