--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="./html-css-js/part01/web004.html">Web004</a>
     <a href="./html-css-js/part01/web005.html">web005</a>
     <a href="./html-css-js/part01/web006.html">Web006</a>
+    <a href="./html-css-js/part01/web007.html">web007</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
