--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a href="./html-css-js/part01/web005.html">web005</a>
     <a href="./html-css-js/part01/web006.html">Web006</a>
     <a href="./html-css-js/part01/web007.html">web007</a>
+    <a href="./html-css-js/part01/web008.html">Web008</a>
+    <a href="./html-css-js/part01/web009.html">web009</a>
+    <a href="./html-css-js/part01/web010.html">web010</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
