--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <a href="./html-css-js/part01/web008.html">Web008</a>
     <a href="./html-css-js/part01/web009.html">web009</a>
     <a href="./html-css-js/part01/web010.html">web010</a>
+    <a href="./html-css-js/part01/web011.html">web011</a>
+    <a href="./html-css-js/part01/web012.html">web012</a>
+    <a href="./html-css-js/part01/web013.html">web013</a>
+    <a href="./html-css-js/part01/web014.html">Web014</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
