added up to web029

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     <a href="./html-css-js/part02/web023.html">Web023</a>
     <a href="./html-css-js/part02/web024.html">web024</a>
     <a href="./html-css-js/part02/web025.html">Web025</a>
+    <a href="./html-css-js/part02/web026.html">Web026</a>
+    <a href="./html-css-js/part02/web027.html">Web027</a>
+    <a href="./html-css-js/part02/web028.html">Web028</a>
+    <a href="./html-css-js/part02/web029.html">Web029</a>
     <hr>
     <h3>My Assignments</h3>
     <a href="./html-css-js/Assignments/Assignment1.html">Assignment1</a>
